feat: kafka messabger works